<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/register_user_container"
    tools:context=".fragments.RegisterUserFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="15dp">


        <AutoCompleteTextView
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:hint="@string/prompt_username"
            android:layout_margin="10dp"
            android:textColorHint="@color/shadowblack"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textIsSelectable="false"/>
        <AutoCompleteTextView
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:imeOptions="actionNext"
            android:textColorHint="@color/shadowblack"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textIsSelectable="false"/>
        <EditText
            android:id="@+id/register_password"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:textColorHint="@color/shadowblack"
            android:layout_width="match_parent"
            android:imeOptions="actionNext"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:textColorHint="@color/shadowblack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_confirm_password"
            android:imeActionId="@integer/register_form_finished"
            android:imeActionLabel="@string/register_signup_btn"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <Button
            android:id="@+id/register_sign_up_button"
            style="?android:textAppearanceMedium"
            android:background="@color/green"
            android:textColor="@color/white"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_signup_btn"
            android:textStyle="bold"/>
    </LinearLayout>



</FrameLayout>