<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/main_container"
    tools:context=".fragments.MainFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_name"
        android:textColor="@color/green"
        android:textAlignment="center"
        android:textSize="100dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"

        >

    </TextView>


    


    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/main_signUp"

        android:textColor="@color/white"
        android:textSize="23dp"
        android:fontFamily="sans-serif"
        android:layout_margin="15dp"
        android:textStyle="bold">

    </Button>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/already_acc"
            android:textColor="@color/shadowblack"
            android:textSize="20dp" />

        <Button
            android:id="@+id/alread_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/shadowblack"
            android:padding="0dp"
            android:textSize="20dp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="18dp"
            android:text="@string/login_already_text"/>
    </LinearLayout>


</LinearLayout>